@@ -22,6 +22,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -42,30 +43,35 @@ public final class StandardDirectoryReader extends DirectoryReader {
   private final boolean applyAllDeletes;
   private final boolean writeAllDeletes;
 
-  /** called only from static open() methods */
+  /** package private constructor, called only from static open() methods. */
   StandardDirectoryReader(
       Directory directory,
       LeafReader[] readers,
       IndexWriter writer,
       SegmentInfos sis,
+      Comparator<LeafReader> leafSorter,
       boolean applyAllDeletes,
       boolean writeAllDeletes)
       throws IOException {
-    super(directory, readers);
+    super(directory, readers, leafSorter);
     this.writer = writer;
     this.segmentInfos = sis;
     this.applyAllDeletes = applyAllDeletes;
     this.writeAllDeletes = writeAllDeletes;
   }
 
-  static DirectoryReader open(final Directory directory, final IndexCommit commit)
+  static DirectoryReader open(
+      final Directory directory, final IndexCommit commit, Comparator<LeafReader> leafSorter)
       throws IOException {
-    return open(directory, Version.MIN_SUPPORTED_MAJOR, commit);
+    return open(directory, Version.MIN_SUPPORTED_MAJOR, commit, leafSorter);
   }
 
   /** called from DirectoryReader.open(...) methods */
   static DirectoryReader open(
-      final Directory directory, int minSupportedMajorVersion, final IndexCommit commit)
+      final Directory directory,
+      int minSupportedMajorVersion,
+      final IndexCommit commit,
+      Comparator<LeafReader> leafSorter)
       throws IOException {
     return new SegmentInfos.FindSegmentsFile<DirectoryReader>(directory) {
       @Override
@@ -86,11 +92,10 @@ public final class StandardDirectoryReader extends DirectoryReader {
             readers[i] =
                 new SegmentReader(sis.info(i), sis.getIndexCreatedVersionMajor(), IOContext.READ);
           }
-
           // This may throw CorruptIndexException if there are too many docs, so
           // it must be inside try clause so we close readers in that case:
           DirectoryReader reader =
-              new StandardDirectoryReader(directory, readers, null, sis, false, false);
+              new StandardDirectoryReader(directory, readers, null, sis, leafSorter, false, false);
           success = true;
 
           return reader;
@@ -149,6 +154,7 @@ public final class StandardDirectoryReader extends DirectoryReader {
               readers.toArray(new SegmentReader[readers.size()]),
               writer,
               segmentInfos,
+              writer.getConfig().getLeafSorter(),
               applyAllDeletes,
               writeAllDeletes);
       return result;
@@ -169,7 +175,10 @@ public final class StandardDirectoryReader extends DirectoryReader {
    * @lucene.internal
    */
   public static DirectoryReader open(
-      Directory directory, SegmentInfos infos, List<? extends LeafReader> oldReaders)
+      Directory directory,
+      SegmentInfos infos,
+      List<? extends LeafReader> oldReaders,
+      Comparator<LeafReader> leafSorter)
       throws IOException {
 
     // we put the old SegmentReaders in a map, that allows us
@@ -291,7 +300,8 @@ public final class StandardDirectoryReader extends DirectoryReader {
         }
       }
     }
-    return new StandardDirectoryReader(directory, newReaders, null, infos, false, false);
+    return new StandardDirectoryReader(
+        directory, newReaders, null, infos, leafSorter, false, false);
   }
 
   // TODO: move somewhere shared if it's useful elsewhere
@@ -406,7 +416,8 @@ public final class StandardDirectoryReader extends DirectoryReader {
   }
 
   DirectoryReader doOpenIfChanged(SegmentInfos infos) throws IOException {
-    return StandardDirectoryReader.open(directory, infos, getSequentialSubReaders());
+    return StandardDirectoryReader.open(
+        directory, infos, getSequentialSubReaders(), subReadersSorter);
   }
 
   @Override
